@@ -4,6 +4,7 @@ Sigil-1.4.2
       - fix bug in multiple language spellchecking dialog word lookup 
             when no language attributes used
       - update de, nl, sv, ko, ru translations that missed the Sigil 1.4.0 initial release
+      - fix bug in OPF metadata attributes that use named entities
 
 Sigil-1.4.1
     Bug Fixes:
